--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,3 +2,6 @@ john_doe:
   email: john@example.com
   encrypted_password: <%= User.new.send(:password_digest, 'password') %>
 
+smith:
+  email: smith@example.com
+  encrypted_password: <%= User.new.send(:password_digest, 'password') %>
