--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ after_success:
   - if [[ "$TRAVIS_PULL_REQUEST" == "true" ]]; then echo "Pull request. No deployment!"; exit 0; fi
   - if [[ "$TRAVIS_BRANCH" == "staging" ]]; then git remote add heroku git@heroku.com:pressevent-staging.git; fi
   - if [[ "$TRAVIS_BRANCH" == "master" ]]; then git remote add heroku git@heroku.com:pressevent.git; fi
-  - git remote -v | grep heroku && if [[ $? -ne 0 ]]; exit 0; fi
+  - git remote -v | grep heroku || exit 0
   - wget -qO- https://toolbelt.heroku.com/install-ubuntu.sh | sh
   - echo "Host heroku.com" >> ~/.ssh/config
   - echo "   StrictHostKeyChecking no" >> ~/.ssh/config
