--- a/config/database.yml
+++ b/config/database.yml
@@ -4,8 +4,8 @@ development:
   database: pressevent_development
   pool: 5
   host: localhost
-  username: postgres
-  password:
+  username: pressevent
+  password: pressevent
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -16,7 +16,7 @@ test:
   database: pressevent_test
   host: localhost
   pool: 5
-  username: postgres
-  password:
+  username: pressevent
+  password: pressevent
 
 # The production database is setup by heroku hooks
